<resources>

    <!-- Nom de la App -->
    <string name="app_name">ShortCuts</string>

    <!--                                     STRINGS PER AL LAYOUT I ACTIVITY PRINCIPAL                                  -->
    <!-- Strings per als botons -->
    <string name="camara">Camera</string>
    <string name="galeria">Gallery</string>
    <string name="alarma">Alarm</string>
    <string name="contactes">Contacts</string>
    <string name="trucar">Call</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="navegador">Browser</string>
    <string name="configandroid">Settings</string>
    <string name="maps">Maps</string>
    <string name="datos">Data</string>

    <!-- Strings per al Menú -->
    <string name="configuracio">Settings</string>
    <string name="info">About the app</string>

    <!-- Strings per a les textview -->
    <string name="wifi">WiFi</string>
    <string name="flash">Torch</string>

    <!-- Avisos de informació -->
    <string name="nowhatsapp">WhatsApp isn\'t installed on your device</string>
    <string name="noflash">Can\'t access to the device FlashLight</string>


    <!--                                     STRINGS PER AL LAYOUT I ACTIVITY CONFIGURACIÓ                                  -->

    <!-- Strings per a info -->
    <string name="informacio">About the app</string>
    <string name="infoimportant">This app has been developed by Pablo Fraile Alonso for the Research project.
    All the information and work are under the GNU License, so if you want to use it, be aware of that.</string>

    <!-- Strings per a configuració del color -->
    <string name="colorprincipal">Principal Color of the App</string>
    <string name="tria">choose the predifined color</string>
    <string name="rosa">pink</string>
    <string name="blau">blue</string>
    <string name="gris">grey</string>
    <string name="cyan">cyan</string>
    <string name="verd">green</string>
    <string name="taronja">orange</string>

    <!-- Strings per a el botó i textview de aplicació predeterminada -->
    <string name="aplicaciopredeterminada">Choose the default home app</string>
    <string name="click">click here</string>

    <!-- Strings per al missatge del Toast de configuració -->
    <string name="rosaaplicat">App Theme has been changed to Pink!</string>
    <string name="blauaplicat">App theme has been changed to Blue!</string>
    <string name="grisaplicat">App Theme has been changed to Grey!</string>
    <string name="cyanaplicat">App Theme has been changed to Cyan!</string>
    <string name="verdaplicat">App Theme has been changed to Green!</string>
    <string name="taronjaaplicat">App theme has been changed to Orange!</string>

    <!-- Strings per al missatge del Toast que indica que la versió de Android no soporta la funció -->
    <string name="APInoN">Your Android Version doesn\'t support that feature</string>

    <!-- Strings per als TOAST de pagament dintre de la app -->
    <string name="noanuncis">Disable the add banner inside the app</string>
    <string name="botonoanuncis">Disable</string>
    <string name="noplaystore">Google PlayStore isn\'t installed in your device </string>
    <string name="comprat"> Add-Free version unlocked! </string>

    <!--                                     STRINGS PER AL LAYOUT I ACTIVITY INFORMACIÓ DE LA APP                              -->
    <!-- Strings per al missatge de compartir la app-->
    <string name="comparteixamb">Share the app using: </string>
    <string name="titol">Share my app</string>
    <string name="cos">Please share my app and rate it with 5 stars :) </string>


</resources>
