<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitat_Principal">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="318dp"
        android:layout_height="487dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        android:padding="0dp"
        android:rowCount="5">

        <Button
            android:id="@+id/botocamera"
            android:layout_width="101dp"
            android:layout_height="105dp"
            android:layout_column="0"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:textSize="17dp"
            android:text="@string/camara" />

        <Button
            android:id="@+id/botogaleria"
            android:layout_width="101dp"
            android:layout_height="105dp"
            android:layout_column="1"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:textSize="17dp"
            android:text="@string/galeria" />

        <Button
            android:id="@+id/botollanterna"
            android:layout_width="101dp"
            android:layout_height="105dp"
            android:layout_column="2"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:textSize="17dp"
            android:text="@string/llanterna" />

        <Button
            android:id="@+id/bototrucar"
            android:layout_width="101dp"
            android:layout_height="105dp"
            android:layout_column="0"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:textSize="17dp"
            android:text="@string/trucar" />

        <Button
            android:id="@+id/botocontactes"
            android:layout_width="101dp"
            android:layout_height="105dp"
            android:layout_column="1"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:textSize="14dp"
            android:text="@string/contactes" />

        <Button
            android:id="@+id/botowhatsapp"
            android:layout_width="101dp"
            android:layout_height="105dp"
            android:layout_column="2"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:textSize="14dp"
            android:text="@string/whatsapp" />

    </GridLayout>

    <TextView
        android:id="@+id/txtwifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/togglewifi"
        android:layout_alignParentStart="true"
        android:layout_column="3"
        android:layout_marginStart="74dp"
        android:layout_row="0"
        android:text="Wifi" />

    <ToggleButton
        android:id="@+id/togglewifi"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/gridLayout"
        android:layout_marginBottom="32dp"
        android:text="WIFI" />

    <ToggleButton
        android:id="@+id/togglellanterna"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_alignTop="@+id/togglewifi"
        android:text="Lantern" />

    <Button
        android:id="@+id/btdatos"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:layout_alignTop="@+id/togglewifi"
        android:layout_centerHorizontal="true"
        android:text="DATA" />

</RelativeLayout>